name:                cli-rss-reader
version:             0.1.0.0
license:             BSD3
author:              Tatsuya Hirose
maintainer:          tatsuya.hirose.0804@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable cli-rss-reader
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , process >=1.2 && <1.3
                     , mtl  >=2.2 && <2.3
                     , transformers >=0.4 && <0.5
                     , http-conduit >=2.1 && <2.2
                     , lens >=4.12 && <4.13
                     , yaml-light >=0.1 && <0.2
                     , yaml-light-lens >=0.3 && <0.4
                     , xml-conduit >=1.4 && <2.0
                     , xml-lens >=0.1 && <0.2
                     , vty >=5.2 && <5.3
  ghc-options:         -threaded
  default-language:    Haskell2010
